--- a/portfolio1.html
+++ b/portfolio1.html
@@ -491,7 +491,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 											<div class="col-md-5">
 												<div class="task design-time text-right">
 													<h2>3D modeling</h2>
-													<h3>Rhino 3D</h3>
+													<h3>Rhinoceros 3D</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -517,7 +517,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
-													<h2>Equipment and Interactions</h2>
+													<h2>Equipment, Interactions</h2>
 													<h3>Unity</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
@@ -724,7 +724,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
-													<h2>Target Introduction, Practice Session and Task</h2>
+													<h2>Target Introduction, Practice Session, Task</h2>
 													<h3>Unity</h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
@@ -737,7 +737,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 														</h4>
 														<h5></h5>
 														<p class="description">
-															Participants were briefly shown a printed list of seven target paintings. In the VR environment, they could access the list in their left hand as a reference.Participants completed a three-minute practice session in VR to learn controls and task requirements, then began the task, with data recorded in a timed 20-minute session.
+															Participants were first shown a printed list of seven target paintings, along with a brief introduction to each one, including their names and stories. This gave them time to memorize the paintings and provided context to make recall easier, as the focus was not on testing memory or cognition. In the VR environment, they could also access the list at any time in their left hand for reference. Next, they completed a three-minute practice session in a simple VR setting, where they learned the controllers and task requirements, seeing only the target paintings. Finally, they began the main task, which was recorded in a timed 20-minute session.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
