--- a/portfolio1.html
+++ b/portfolio1.html
@@ -958,11 +958,11 @@ Key evaluation metrics included (1) frequency of task list checks, (2) total tas
 							<div class="single-about-txt">
 								<h3>
 									
-After completing the VR task, participants answered eight open-ended questions to provide feedback on their experience. Responses were organized into five main categories—beneficial, difficult, fun, time tracking, and retrying the game—and further distilled into two key themes: effectiveness and engagement.
+Survey responses were grouped into four categories—effective, challenging, engaging, and time awareness—and distilled into two key themes: effectiveness and engagement. 
 
-Effectiveness: Participants in the audio and haptic conditions consistently found the cues helpful, with some noting that cues prevented them from missing paintings. In contrast, 47% in the mirror condition barely used the mirror, with only 6% using it frequently. Many in the control and mirror conditions found the task challenging, while those in audio and haptic conditions found it manageable.
+Effectiveness: Participants in the audio and haptic conditions consistently praised the cues, noting they helped prevent missed paintings. In contrast, about half of those in the mirror condition rarely used the mirror, with only 6% relying on it frequently. Many participants in the control and mirror conditions described the task as challenging, while those in the audio and haptic conditions found it more manageable.
 
-Engagement: Cues increased engagement across all groups. Enjoyment ratings were high, especially in audio (100%) and haptic (86%) conditions, where cues helped participants stay focused. Time perception also varied; most participants in the audio (76%) and control (70%) conditions felt a “loss of time,” indicating deep engagement. Overall, 85-100% across all conditions expressed willingness to try the task again.
+Engagement: Guidance cues boosted engagement across all groups. Enjoyment was highest in the audio (100%) and haptic (86%) conditions, where cues helped participants stay focused. Time perception varied, with most participants in the audio (76%) and control (70%) conditions experiencing a "loss of time," reflecting deep engagement in the task.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
