--- a/portfolio1.html
+++ b/portfolio1.html
@@ -1046,9 +1046,7 @@ Engagement: Guidance cues boosted engagement across all groups. Enjoyment was hi
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Throughout this project, I developed strong time management skills as I often had to coordinate multiple aspects of the study simultaneously, prioritizing certain tasks when needed. I also gained a new perspective on working with human subjects, especially given the technological challenges—VR in particular requires meticulous attention to detail and well-defined eligibility criteria to ensure participant safety. Setting these criteria was a careful and time-intensive process.
-
-The biggest learning curve was cultivating patience. Recruiting and testing 71 participants, with each session taking about an hour, was demanding. Remaining as attentive and consistent with each participant, from the first to the last, required endurance, as the study spanned two months of daily sessions.
+									Among all the things I learned during this project, one of the most transformative was honing my time management skills. I balanced a wide range of tasks—from 3D modeling to game interaction development, literature review, and pilot tests—while continuously adapting my workflow to meet shifting priorities. Along the way, I gained valuable insights into working with human subjects, particularly in the intricate world of VR, where precision, attention to detail, and clear eligibility criteria are essential to ensure safety and reliable outcomes. Perhaps the most challenging and rewarding lesson was cultivating patience and consistency; recruiting and testing 71 participants, with each session taking about an hour, was demanding. Remaining as attentive and consistent with each participant, from the first to the last, required endurance, as the study spanned two months of daily sessions. This journey not only strengthened my skills but also deepened my passion for innovative, human-centered design and research.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
