--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
 							<div class="single-about-txt">
 								<h3>
 									
-I am a passionate researcher and designer with a deep understanding of the context behind every project. With a background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research, considering the social, cultural, and environmental factors that shape each experience. I blend research-driven insights with creative design to tackle complex challenges and craft innovative solutions that truly resonate with people.
-								</h3>
+As a passionate UX researcher and designer, my work is driven by an intellectual curiosity to deeply understand human experiences and interactions. With a multidisciplinary background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research that considers the social, cultural, behavioral, and environmental factors shaping every experience. By integrating research-driven insights with creative design, I tackle complex challenges to craft innovative solutions that resonate deeply with users.
+
+Currently, my research focuses on interpersonal communication dynamics between designers and engineers—a critical yet often overlooked area in both academia and industry. By identifying patterns and barriers, I aim to disrupt destructive communication cycles and foster more effective, inclusive collaboration. My broader mission is to create meaningful, user-centered solutions that transform the way people and teams engage with technology and with one another.
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
 								</p>
