--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2022 - 2023</h2>
-									<h3>Master of Science <span>in </span> HCI</h3>
+									<h3>Master <span>of </span> Scinece <span>in </span>HCI</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
