--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</h4>
 										<!--<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Concentrated on advanced spatial design, user behavior analysis,, and the integration of technology and sustainability.
+											Concentrated on advanced spatial design, user behavior analysis, and the integration of technology and sustainability.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -271,7 +271,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</h4>
 										<!--<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Explored the impact of sensory cues on user attentional orientation in virtual reality to identify the most effective cues for guiding users through immersive environments. 
+											Explored the impact of effectiveness of guidance cues for visual targets in virtual environments. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -295,7 +295,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</h4>
 										<!--<h5>bolton, united kingdome</h5>-->
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											Exploring interpersonal communication dynamics between designers and engineers to foster effective, inclusive collaboration and create meaningful, user-centered solutions. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
