--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			                    <li class=" smooth-menu"><a href="#education">education</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
-			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
+			                    <li class="smooth-menu"><a href="#publications">publications</a></li>
 			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
 			                    <!--<li class="smooth-menu"><a href="#clients">clients</a></li>-->
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
@@ -626,67 +626,67 @@ Currently, my research focuses on interpersonal communication dynamics between d
 		</section><!--/.experience-->
 		<!--experience end -->
 
-		<!--profiles start -->
-		<section id="profiles" class="profiles">
-			<div class="profiles-details">
+		<!--publications start -->
+		<section id="publications" class="publications">
+			<div class="publications-details">
 				<div class="section-heading text-center">
-					<h2>profiles</h2>
+					<h2>publications</h2>
 				</div>
 				<div class="container">
-					<div class="profiles-content">
+					<div class="publications-content">
 						<div class="row">
 							<div class="col-sm-3">
-								<div class="single-profile">
-									<div class="profile-txt">
+								<div class="single-publications">
+									<div class="publications-txt">
 										<a href=""><i class="flaticon-themeforest"></i></a>
-										<div class="profile-icon-name">themeforest</div>
+										<div class="publications-icon-name">themeforest</div>
 									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
+									<div class="single-publications-overlay">
+										<div class="publications-txt">
 											<a href=""><i class="flaticon-themeforest"></i></a>
-											<div class="profile-icon-name">themeforest</div>
+											<div class="publications-icon-name">themeforest</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-sm-3">
-								<div class="single-profile">
-									<div class="profile-txt">
+								<div class="single-publications">
+									<div class="publications-txt">
 										<a href=""><i class="flaticon-dribbble"></i></a>
-										<div class="profile-icon-name">dribbble</div>
+										<div class="publications-icon-name">dribbble</div>
 									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
+									<div class="single-publications-overlay">
+										<div class="publications-txt">
 											<a href=""><i class="flaticon-dribbble"></i></a>
-											<div class="profile-icon-name">dribbble</div>
+											<div class="publications-icon-name">dribbble</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-sm-3">
-								<div class="single-profile">
-									<div class="profile-txt">
+								<div class="single-publications">
+									<div class="publications-txt">
 										<a href=""><i class="flaticon-behance-logo"></i></a>
-										<div class="profile-icon-name">behance</div>
+										<div class="publications-icon-name">behance</div>
 									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
+									<div class="single-publications-overlay">
+										<div class="publications-txt">
 											<a href=""><i class="flaticon-behance-logo"></i></a>
-											<div class="profile-icon-name">behance</div>
+											<div class="publications-icon-name">behance</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-sm-3">
-								<div class="single-profile profile-no-border">
-									<div class="profile-txt">
+								<div class="single-publications publications-no-border">
+									<div class="publications-txt">
 										<a href=""><i class="flaticon-github-logo"></i></a>
-										<div class="profile-icon-name">github</div>
+										<div class="publications-icon-name">github</div>
 									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
+									<div class="single-publications-overlay">
+										<div class="publications-txt">
 											<a href=""><i class="flaticon-github-logo"></i></a>
-											<div class="profile-icon-name">github</div>
+											<div class="publications-icon-name">github</div>
 										</div>
 									</div>
 								</div>
