--- a/index.html
+++ b/index.html
@@ -634,17 +634,19 @@ Currently, my research focuses on interpersonal communication dynamics between d
 				</div>
 				<div class="container">
 					<div class="publications-content">
+						</div>
+						<div class="profile-border"></div>
 						<div class="row">
 							<div class="col-sm-3">
-								<div class="single-publications">
-									<div class="publications-txt">
-										<a href=""><i class="flaticon-themeforest"></i></a>
-										<div class="publications-icon-name">themeforest</div>
+								<div class="single-profile">
+									<div class="profile-txt">
+										<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
+										<div class="profile-icon-name">flickR</div>
 									</div>
-									<div class="single-publications-overlay">
-										<div class="publications-txt">
-											<a href=""><i class="flaticon-themeforest"></i></a>
-											<div class="publications-icon-name">themeforest</div>
+									<div class="single-profile-overlay">
+										<div class="profile-txt">
+											<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
+											<div class="profile-icon-name">flickR</div>
 										</div>
 									</div>
 								</div>
