--- a/index.html
+++ b/index.html
@@ -626,27 +626,67 @@ Currently, my research focuses on interpersonal communication dynamics between d
 		</section><!--/.experience-->
 		<!--experience end -->
 
-		<!--publications start -->
-		<section id="publications" class="publications">
-			<div class="publications-details">
+		<!--profiles start -->
+		<section id="profiles" class="profiles">
+			<div class="profiles-details">
 				<div class="section-heading text-center">
-					<h2>publications</h2>
+					<h2>profiles</h2>
 				</div>
 				<div class="container">
-					<div class="publications-content">
-						</div>
-						<div class="profile-border"></div>
+					<div class="profiles-content">
 						<div class="row">
 							<div class="col-sm-3">
 								<div class="single-profile">
 									<div class="profile-txt">
-										<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
-										<div class="profile-icon-name">flickR</div>
+										<a href=""><i class="flaticon-themeforest"></i></a>
+										<div class="profile-icon-name">themeforest</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
-											<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
-											<div class="profile-icon-name">flickR</div>
+											<a href=""><i class="flaticon-themeforest"></i></a>
+											<div class="profile-icon-name">themeforest</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="single-profile">
+									<div class="profile-txt">
+										<a href=""><i class="flaticon-dribbble"></i></a>
+										<div class="profile-icon-name">dribbble</div>
+									</div>
+									<div class="single-profile-overlay">
+										<div class="profile-txt">
+											<a href=""><i class="flaticon-dribbble"></i></a>
+											<div class="profile-icon-name">dribbble</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="single-profile">
+									<div class="profile-txt">
+										<a href=""><i class="flaticon-behance-logo"></i></a>
+										<div class="profile-icon-name">behance</div>
+									</div>
+									<div class="single-profile-overlay">
+										<div class="profile-txt">
+											<a href=""><i class="flaticon-behance-logo"></i></a>
+											<div class="profile-icon-name">behance</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="single-profile profile-no-border">
+									<div class="profile-txt">
+										<a href=""><i class="flaticon-github-logo"></i></a>
+										<div class="profile-icon-name">github</div>
+									</div>
+									<div class="single-profile-overlay">
+										<div class="profile-txt">
+											<a href=""><i class="flaticon-github-logo"></i></a>
+											<div class="profile-icon-name">github</div>
 										</div>
 									</div>
 								</div>
@@ -667,7 +707,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div>
 								</div>
-							</div>
+							<!--</div>
 							<div class="col-sm-3">
 								<div class="single-profile">
 									<div class="profile-txt">
@@ -680,7 +720,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 											<div class="profile-icon-name">smungMung</div>
 										</div>
 									</div>
-								</div>
+								</div>-->
 							</div>
 							<div class="col-sm-3">
 								<div class="single-profile">
@@ -695,7 +735,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div>
 								</div>
-							</div>
+							<!--</div>
 							<div class="col-sm-3">
 								<div class="single-profile profile-no-border">
 									<div class="profile-txt">
@@ -707,7 +747,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 											<a href=""><i class="flaticon-bitbucket-logotype-camera-lens-in-perspective"></i></a>
 											<div class="profile-icon-name">bitBucket</div>
 										</div>
-									</div>
+									</div>-->
 								</div>
 							</div>
 						</div>
