--- a/index.html
+++ b/index.html
@@ -627,10 +627,10 @@ Currently, my research focuses on interpersonal communication dynamics between d
 		<!--experience end -->
 
 		<!--profiles start -->
-		<section id="profiles" class="profiles">
-			<div class="profiles-details">
+		<section id="publications" class="publications">
+			<div class="publications-details">
 				<div class="section-heading text-center">
-					<h2>profiles</h2>
+					<h2>publications</h2>
 				</div>
 				<div class="container">
 					<div class="profiles-content">
