--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div>
 								</div>-->
-							</div>
+							<!--</div>
 							<div class="col-sm-3">
 								<div class="single-profile">
 									<div class="profile-txt">
@@ -755,8 +755,8 @@ Currently, my research focuses on interpersonal communication dynamics between d
 				</div>
 			</div>
 
-		</section><!--/.profiles-->
-		<!--profiles end -->
+		</section><!--/.publicationss-->
+		<!--publications end -->
 
 		<!--portfolio start -->
 		<section id="portfolio" class="portfolio">
