--- a/index.html
+++ b/index.html
@@ -639,12 +639,12 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								<div class="single-profile">
 									<div class="profile-txt">
 										<a href=""><i class="flaticon-themeforest"></i></a>
-										<div class="profile-icon-name">themeforest</div>
+										<div class="profile-icon-name">CHI</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
 											<a href=""><i class="flaticon-themeforest"></i></a>
-											<div class="profile-icon-name">themeforest</div>
+											<div class="profile-icon-name">CHI</div>
 										</div>
 									</div>
 								</div>
