--- a/index.html
+++ b/index.html
@@ -653,12 +653,12 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								<div class="single-profile">
 									<div class="profile-txt">
 										<a href=""><i class="flaticon-dribbble"></i></a>
-										<div class="profile-icon-name">dribbble</div>
+										<div class="profile-icon-name">HCI International</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
 											<a href=""><i class="flaticon-dribbble"></i></a>
-											<div class="profile-icon-name">dribbble</div>
+											<div class="profile-icon-name">HCI International</div>
 										</div>
 									</div>
 								</div>
@@ -667,12 +667,12 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								<div class="single-profile">
 									<div class="profile-txt">
 										<a href=""><i class="flaticon-behance-logo"></i></a>
-										<div class="profile-icon-name">behance</div>
+										<div class="profile-icon-name">ANNSIM</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
 											<a href=""><i class="flaticon-behance-logo"></i></a>
-											<div class="profile-icon-name">behance</div>
+											<div class="profile-icon-name">ANNSIM</div>
 										</div>
 									</div>
 								</div>
@@ -681,12 +681,12 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								<div class="single-profile profile-no-border">
 									<div class="profile-txt">
 										<a href=""><i class="flaticon-github-logo"></i></a>
-										<div class="profile-icon-name">github</div>
+										<div class="profile-icon-name">HFES</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
 											<a href=""><i class="flaticon-github-logo"></i></a>
-											<div class="profile-icon-name">github</div>
+											<div class="profile-icon-name">HFES</div>
 										</div>
 									</div>
 								</div>
@@ -698,12 +698,12 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								<div class="single-profile">
 									<div class="profile-txt">
 										<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
-										<div class="profile-icon-name">flickR</div>
+										<div class="profile-icon-name">SimAUD</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
 											<a href=""><i class="flaticon-flickr-website-logo-silhouette"></i></a>
-											<div class="profile-icon-name">flickR</div>
+											<div class="profile-icon-name">SimAUD</div>
 										</div>
 									</div>
 								</div>
