--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Unity</span>
+										<span class="progressText">Thematic coding</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="10" aria-valuemax="100" style="">
