--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>Jan2022 - Aug2022</h2>
+													<h2>2022 - 2022 (eight months)</h2>
 													<h3>Architect Intern</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
