--- a/index.html
+++ b/index.html
@@ -428,14 +428,41 @@ Currently, my research focuses on interpersonal communication dynamics between d
 				<div class="experience-content">
 						<div class="main-timeline">
 							<ul>
-								
+
 
 								<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>Aug2023 – May2025</h2>
+													<h2>2023 – 2026 (expected)</h2>
+													<h3>UX researcher & designer</h3>
+												</div><!--/.experience-time-->
+											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5">
+												<div class="timeline">
+													<div class="timeline-content">
+														<h4 class="title">
+															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+															PhD Dissertation on designer-engineer interpersonal communication and teamwork
+														</h4>
+														<h5>Iowa State University, IA, USA</h5>
+														<p class="description">
+															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+														</p>
+													</div><!--/.timeline-content-->
+												</div><!--/.timeline-->
+											</div><!--/.col-->
+										</div>
+									</div><!--/.single-timeline-box-->
+								</li>
+
+								<li>
+									<div class="single-timeline-box fix">
+										<div class="row">
+											<div class="col-md-5">
+												<div class="experience-time text-right">
+													<h2>2023 – 2025</h2>
 													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
@@ -462,7 +489,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2024 – Jul2024</h2>
+													<h2>Summer 2024</h2>
 													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
@@ -489,7 +516,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>Aug2022 – May2024</h2>
+													<h2>2022 – 2024</h2>
 													<h3>University Instructor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
@@ -516,7 +543,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>Aug2022 – Dec2023</h2>
+													<h2>2022 – 2023</h2>
 													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
@@ -543,7 +570,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2023 – Jul2023</h2>
+													<h2>Summer 2023</h2>
 													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
@@ -597,7 +624,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2016 - Nov2018</h2>
+													<h2>2016 - 2018 (three years)</h2>
 													<h3>founder, owner, designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
