--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@ Currently, my research focuses on interpersonal communication dynamics between d
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															PhD Dissertation on designer-engineer interpersonal communication and teamwork
+															PhD Dissertation on designer-engineer teamwork
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Collaborating with experts in HCI, computer science, architecture, and communication studies to design experiments that uncover designer-engineer interpersonal communication patterns, with the ultimate goal of developing an AI-based tool to enhance cross-functional teamwork. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -624,7 +624,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2016 - 2018 (three years)</h2>
+													<h2>2016 - 2018 (~three years)</h2>
 													<h3>founder, owner, designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
