--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2023 – 2026 (expected)</h2>
+													<h2>2023 – 2026</h2>
 													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
@@ -475,7 +475,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															As part of an interdisciplinary team, I am exploring innovative pathways to introduce cybersecurity knowledge to rural English learners through XR-enabled educational tools. By leveraging user research and game development in Unity, we aim to create an immersive and inclusive learning experience that teaches middle school students the fundamentals of cybersecurity. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -502,7 +502,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iowa State University, Ai, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Instructed nine undergraduates in Blender and mentored three students in creating a 3D mini-game on electric circuits for middle school English learners in rural areas. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -529,7 +529,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iowa State University, AI, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Instructed second-year undergraduate architecture students in a 6-credit studio course, holding weekly desk crits, midterm and final reviews, and participating in field trips with over 100 students to Chicago and Columbus, Indiana each semester. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -556,7 +556,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Designed and executed a mixed-method user experience study on the effectiveness of guidance cues for visual targets in virtual environments. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -583,7 +583,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Instructed nine undergraduates in Blender and mentored three students in creating a 3D mini-game 3D game to inspire first-gen, middle school English learners in rural areas.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -610,7 +610,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Pella, AI, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in  in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Engaged in the site visit, design, and construction phases of four projects, producing technical drawings and 3D models, and collaborating in client meetings to listen to and document their requirements and desires. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -637,7 +637,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iran</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Managed the full design and construction process of nine industrial and residential projects, delivering them with fewer revisions and cost savings, while creating inclusive designs that met diverse client needs and earning recognition for excellence in client satisfaction. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
