--- a/portfolio2.html
+++ b/portfolio2.html
@@ -119,7 +119,7 @@
 		<!--about start -->
 		<section id="about" class="about">
 			<div class="section-heading text-center">
-				<h2>Effectiveness of Guidance Cues for Visual Targets in Virtual Environments</h2>
+				<h2>Why Doesn’t that Conversational Agent Exist Yet?  </h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
@@ -128,7 +128,7 @@
 							<div class="single-about-txt">
 								<h3>
 									
-How can we help users navigate virtual reality without breaking their sense of immersion? This mixed-method study evaluates passive (rear-view mirror) and active (audio and haptic) cues in a VR scavenger hunt, finding that haptics are the most effective, followed by audio, while rear-view mirrors prove unsuitable for such environments and tasks.
+The Knowledge Navigator video, produced by Apple in 1987 for the Educom conference, presented a visionary concept of human-computer interaction through the character of Phil, an intelligent digital assistant who aids Mike in various tasks. This foresaw the development of modern tools like Zoom, with Phil acting as a proactive, trusted assistant capable of real-time information retrieval and seamless collaboration. The video demonstrated the potential of conversational agents in academic and professional settings, offering a glimpse into the future of technology-assisted teamwork. The gap between current chatbot technology and the capabilities shown in the KN video raises the research question: What constraints prevent the widespread adoption of agents capable of such dynamic, conversational interactions?
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
