--- a/portfolio2.html
+++ b/portfolio2.html
@@ -421,7 +421,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 		<!--skills end -->
 
 		<!--task design start -->
-		<section id="task-design" class="task design">
+		<!--<section id="task-design" class="task design">
 			<div class="section-heading text-center">
 				<h2>task design</h2>
 			</div>
@@ -439,8 +439,8 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h2>Task</h2>
 													<h3></h3>
 												</div><!--/.task design-time-->
-											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--</div><!--/.col-->
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -458,7 +458,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 									</div><!--/.single-timeline-box-->
 								</li>
 								
-								<li>
+								<!--<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
@@ -467,7 +467,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3>Google map, AutoCad, Rhinoceros 3D</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -485,7 +485,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 									</div><!--/.single-timeline-box-->
 								</li>
 
-								<li>
+								<!--<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
@@ -494,7 +494,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3>Rhinoceros 3D</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -512,7 +512,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 									</div><!--/.single-timeline-box-->
 								</li>
 
-								<li>
+								<!--<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
@@ -521,7 +521,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3>Unity</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -540,7 +540,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 								</li>
 								
 								<li>
-									<div class="single-timeline-box fix">
+									<!--<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
@@ -548,7 +548,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3>Unity</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
